# large-text-analysis

./: .gitignore  README.md  core.py  invertedindex.py  main-page.py  main.py  pyproject.toml  requirements.txt  test.py  utils.py
.github/workflows/: unit-tests.yml
backend/: requirements.txt
backend/app/: core.py  invertedindex.py  main.py
backend/console-demo/: datastorage.py  dummy.py  invertedindex.py  main.py
console-demo/: datastorage.py  invertedindex.py  main.py  stop-words-list.txt  test.py  test_invertedindex.py
docs/: cluster_analysis.md  exclusive_clustering_optimization.md  genesis.md
frontend/: index.html  script.js  style.css
src/: config.py  data_exporter.py  datastorage.py  demo.py  invertedindex.py  main.py  search_engine.py  tfidf_model.py  web_app.py
src/analysis/: __init__.py  cluster_analyzer.py  exclusive_clusterer.py  exclusive_clustererV2.py  pmi_clusterer.py  tfidf_clusterer.py  tfidf_test_demo_clusterer.py
src/core/: inverted_index.py  tfidf_model.py
src/data/: data_exporter.py  data_storage.py  dataset_sources.py  demo_sentences.py  sqlite_repository.py
src/interface/: invindex.py
src/search/: __init__.py  search_engine.py
src/tests/: test_inverted_index.py
templates/: exclusive.html  index.html  pmi_page.html  pmi_sequential.html  tfidf_page.html
tests/: __init__.py  test_cluster_analyzer.py  test_dataset_sources.py  test_exclusive_clusterer.py  test_inverted_index.py  test_invertedindex.py  test_pmi_clusterer.py  test_sqlite_repository.py  test_tfidf_clusterer.py
