[project]
name = "large-text-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.1",
    "kagglehub>=0.3.13",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "sortedcontainers>=2.4.0",
    "uvicorn>=0.38.0",
]
