[project]
name = "large-text-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "graphviz>=0.21",
    "jinja2>=3.1.6",
    "kagglehub>=0.3.13",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
